[package]
name = "camera"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camera_capture = "0.5.0" # Replace it with something actively maintained.
image = "0.17.0" # Really old version. Used because camera_capture uses it.

[dev-dependencies]
gpu = { path = "libs/gpu" }